# dataset_viz

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/dataset_viz/: app.py
backend/src/dataset_viz_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  style.css
frontend/src/components/: ChartView.tsx  DatasetPicker.tsx  ResultTable.tsx  SqlEditor.tsx
